force-app/main/default/objects/Proposal__c/fields/Date_reminder_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_reminder_sent__c</fullName>
    <description>Date when a reminder letter was sent to the applicant notifying them of the pending submission deadline</description>
    <inlineHelpText>Date when a reminder letter was sent to the applicant notifying them of the pending submission deadline</inlineHelpText>
    <label>Date reminder sent</label>
    <type>Date</type>
</CustomField>