force-app/main/default/objects/Proposal__c/fields/Date_request_withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Date_request_withdrawn__c</fullName>
    <description>Date the proposal was withdrawn (usually by applicant)</description>
    <inlineHelpText>Date the proposal was withdrawn (usually by applicant)</inlineHelpText>
    <label>Date request withdrawn</label>
    <type>Date</type>
</CustomField>