force-app/main/default/objects/Proposal__c/fields/Date_requested_Board_EC_approval__c.field-meta.xml
<CustomField>
    <fullName>Date_requested_Board_EC_approval__c</fullName>
    <description>The date on which a request was made to submit this proposal for Board/EC approval</description>
    <inlineHelpText>The date on which a request was made to submit this proposal for Board/EC approval</inlineHelpText>
    <label>Date requested Board approval</label>
    <type>Date</type>
</CustomField>