force-app/main/default/objects/Proposal__c/fields/Date_review_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_review_completed__c</fullName>
    <description>Date on which this proposal&apos;s review was completed</description>
    <inlineHelpText>Date on which this proposal&apos;s review was completed</inlineHelpText>
    <label>Date review completed</label>
    <type>Date</type>
</CustomField>