force-app/main/default/objects/Proposal__c/fields/Days_approved_for_contract_to_docs_recd__c.field-meta.xml
<CustomField>
    <fullName>Days_approved_for_contract_to_docs_recd__c</fullName>
    <description>The number of days from Date approved for contract to the date contract-related docs were received from the grantee or to today if the docs haven&apos;t yet been received (or to date award withdrawn), blank if date approved for contract is blank</description>
    <formula>IF(
 NOT(ISBLANK( Date_approved_for_contract__c )),
 IF(
  NOT(ISBLANK( Date_contract_docs_recd__c )),
  Date_contract_docs_recd__c - Date_approved_for_contract__c,
  IF(
   NOT(ISBLANK( Date_award_withdrawn__c )),
   Date_award_withdrawn__c - Date_approved_for_contract__c,
   TODAY() - Date_approved_for_contract__c
  )
 ),
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days from Date approved for contract to the date contract-related docs were received from the grantee or to today if the docs haven&apos;t yet been received (or to date award withdrawn), blank if date approved for contract is blank</inlineHelpText>
    <label>Days approved for contract to docs recd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>