force-app/main/default/objects/Proposal__c/fields/Days_awarded_to_approved_for_contract__c.field-meta.xml
<CustomField>
    <fullName>Days_awarded_to_approved_for_contract__c</fullName>
    <description>The number of days from date awarded to date approved for contract or to today if hasn&apos;t yet been approved (or to date award withdrawn), blank if date awarded is blank</description>
    <formula>IF(
 NOT(ISBLANK( Date_awarded__c )),
 IF(
  NOT(ISBLANK( Date_approved_for_contract__c )),
  Date_approved_for_contract__c - Date_awarded__c,
  IF(
   NOT(ISBLANK( Date_award_withdrawn__c )),
   Date_award_withdrawn__c - Date_awarded__c,
   TODAY() - Date_awarded__c
  )
 ),
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days from date awarded to date approved for contract or to today if hasn&apos;t yet been approved (or to date award withdrawn), blank if date awarded is blank</inlineHelpText>
    <label>Days awarded to approved for contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>