force-app/main/default/objects/Proposal__c/fields/Days_received_to_awarded_declined__c.field-meta.xml
<CustomField>
    <fullName>Days_received_to_awarded_declined__c</fullName>
    <description>The number of days from when the proposal was received to when it was withdrawn/awarded/declined, or to today if those dates are blank</description>
    <formula>IF(ISBLANK(Date_received__c), null,
IF(NOT(ISBLANK( Prior_proposal__c )), 0, /* Zero out duration if this is a subsequent proposal in a quasi-MY series. */

 IF(NOT(ISBLANK( Date_request_withdrawn__c )), 
  Date_request_withdrawn__c,
 IF(NOT(ISBLANK( Date_award_withdrawn__c )), 
  Date_award_withdrawn__c,
 IF(NOT(ISBLANK( Date_awarded__c )), 
  Date_awarded__c,
 IF(NOT(ISBLANK( Date_declined__c )), 
  Date_declined__c,
  TODAY()
 )))) - Date_received__c

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days from when the proposal was received to when it was withdrawn/awarded/declined, or to today if those dates are blank</inlineHelpText>
    <label>Days received to awarded/declined</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>