force-app/main/default/objects/Proposal__c/fields/Days_received_to_paid__c.field-meta.xml
<CustomField>
    <fullName>Days_received_to_paid__c</fullName>
    <description>The sum of days received to awarded/declined and days awarded to paid</description>
    <formula>Days_received_to_awarded_declined__c + Days_awarded_to_paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of days received to awarded/declined and days awarded to paid</inlineHelpText>
    <label>Days received to paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>