force-app/main/default/objects/Proposal__c/fields/Decline_reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary reason for decline</description>
    <inlineHelpText>Primary reason for decline</inlineHelpText>
    <label>Decline reason</label>
    <referenceTo>Decline_reason__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>