force-app/main/default/objects/Proposal__c/fields/Decline_reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Decline_reason_Other__c</fullName>
    <description>Old reason for decline (imported from FileMaker)</description>
    <inlineHelpText>Old reason for decline (imported from FileMaker)</inlineHelpText>
    <label>Decline reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>