force-app/main/default/objects/Proposal__c/fields/Documents_link__c.field-meta.xml
<CustomField>
    <fullName>Documents_link__c</fullName>
    <description>Link (URL) to documents related to this proposal</description>
    <inlineHelpText>Link (URL) to documents related to this proposal</inlineHelpText>
    <label>Documents link</label>
    <type>Url</type>
</CustomField>