force-app/main/default/objects/Proposal__c/fields/Finance_approved_pre_award__c.field-meta.xml
<CustomField>
    <fullName>Finance_approved_pre_award__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to indicate that the Finance director has approved the grant prior to being awarded</description>
    <inlineHelpText>Set to indicate that the Finance director has approved the grant prior to being awarded</inlineHelpText>
    <label>Finance approved pre award</label>
    <type>Checkbox</type>
</CustomField>