force-app/main/default/objects/Proposal__c/fields/Finance_approved_pre_payment__c.field-meta.xml
<CustomField>
    <fullName>Finance_approved_pre_payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to indicate that the Finance director has approved the grant prior to being paid</description>
    <inlineHelpText>Set to indicate that the Finance director has approved the grant prior to being paid</inlineHelpText>
    <label>Finance approved pre payment</label>
    <type>Checkbox</type>
</CustomField>