force-app/main/default/objects/Proposal__c/fields/First_payment_method__c.field-meta.xml
<CustomField>
    <fullName>First_payment_method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first submitted payment method linked to this proposal</description>
    <inlineHelpText>The first submitted payment method linked to this proposal</inlineHelpText>
    <label>First payment method</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Proposals (First payment method)</relationshipLabel>
    <relationshipName>Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>