force-app/main/default/objects/Proposal__c/fields/FS_Group__c.field-meta.xml
<CustomField>
    <fullName>FS_Group__c</fullName>
    <description>FS Group to which this Proposal belongs based on Proposal&apos;s Account Owner.</description>
    <formula>TEXT (Account__r.Owner.FS_Group_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FS Group to which this Proposal belongs based on Proposal&apos;s Account Owner.</inlineHelpText>
    <label>FS Group</label>
    <type>Text</type>
</CustomField>