force-app/main/default/objects/Proposal__c/fields/FY_awarded__c.field-meta.xml
<CustomField>
    <fullName>FY_awarded__c</fullName>
    <description>Fiscal year of the date awarded</description>
    <formula>IF (NOT(ISBLANK( Date_awarded__c )), TEXT(YEAR( Date_awarded__c )), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fiscal year of the date awarded</inlineHelpText>
    <label>FY awarded</label>
    <type>Text</type>
</CustomField>