force-app/main/default/objects/Proposal__c/fields/GM_Data__c.field-meta.xml
<CustomField>
    <fullName>GM_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the GM Data record holding information for this proposal/grant</description>
    <inlineHelpText>Link to the GM Data record holding information for this proposal/grant</inlineHelpText>
    <label>GM Data</label>
    <referenceTo>GM_Data__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>