force-app/main/default/objects/Proposal__c/fields/GM_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>GM_ExternalID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID from original grantmaking database</description>
    <externalId>true</externalId>
    <inlineHelpText>ID from original grantmaking database</inlineHelpText>
    <label>GM ExternalID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>