force-app/main/default/objects/Proposal__c/fields/GM_plus_Advocacy_campaigns__c.field-meta.xml
<CustomField>
    <fullName>GM_plus_Advocacy_campaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional support or activities requested or recommended: Advocacy campaigns</description>
    <inlineHelpText>Additional support or activities requested or recommended: Advocacy campaigns</inlineHelpText>
    <label>GM plus: Advocacy campaigns</label>
    <type>Checkbox</type>
</CustomField>