force-app/main/default/objects/Proposal__c/fields/GM_plus_Advocacy_other__c.field-meta.xml
<CustomField>
    <fullName>GM_plus_Advocacy_other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional support or activities requested or recommended: Advocacy other</description>
    <inlineHelpText>Additional support or activities requested or recommended: Advocacy other</inlineHelpText>
    <label>GM plus: Advocacy other</label>
    <type>Checkbox</type>
</CustomField>