force-app/main/default/objects/Proposal__c/fields/GM_plus_Capacity_building__c.field-meta.xml
<CustomField>
    <fullName>GM_plus_Capacity_building__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional support or activities requested or recommended: Capacity building</description>
    <inlineHelpText>Additional support or activities requested or recommended: Capacity building</inlineHelpText>
    <label>GM plus: Capacity building</label>
    <type>Checkbox</type>
</CustomField>