force-app/main/default/objects/Proposal__c/fields/GM_plus_Convenings__c.field-meta.xml
<CustomField>
    <fullName>GM_plus_Convenings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional support or activities requested or recommended: Convenings</description>
    <inlineHelpText>Additional support or activities requested or recommended: Convenings</inlineHelpText>
    <label>GM plus: Convenings</label>
    <type>Checkbox</type>
</CustomField>