force-app/main/default/objects/Proposal__c/fields/GM_plus_Description__c.field-meta.xml
<CustomField>
    <fullName>GM_plus_Description__c</fullName>
    <description>Describe the GM Plus selection(s) (including but not limited to if “other” is selected).</description>
    <inlineHelpText>Describe the GM Plus selection(s) (including but not limited to if “other” is selected).</inlineHelpText>
    <label>GM plus: Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>