force-app/main/default/objects/Proposal__c/fields/GM_plus_Donor_engagement_events__c.field-meta.xml
<CustomField>
    <fullName>GM_plus_Donor_engagement_events__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional support or activities requested or recommended: Donor engagement/events</description>
    <inlineHelpText>Additional support or activities requested or recommended: Donor engagement/events</inlineHelpText>
    <label>GM plus: Donor engagement/events</label>
    <type>Checkbox</type>
</CustomField>