force-app/main/default/objects/Proposal__c/fields/GM_plus_Networking_linking__c.field-meta.xml
<CustomField>
    <fullName>GM_plus_Networking_linking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional support or activities requested or recommended: Networking/linking</description>
    <inlineHelpText>Additional support or activities requested or recommended: Networking/linking</inlineHelpText>
    <label>GM plus: Networking/linking</label>
    <type>Checkbox</type>
</CustomField>