force-app/main/default/objects/Proposal__c/fields/GM_plus_News_bureau__c.field-meta.xml
<CustomField>
    <fullName>GM_plus_News_bureau__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional support or activities requested or recommended: News bureau</description>
    <inlineHelpText>Additional support or activities requested or recommended: News bureau</inlineHelpText>
    <label>GM plus: News bureau</label>
    <type>Checkbox</type>
</CustomField>