force-app/main/default/objects/Proposal__c/fields/GM_plus_Other__c.field-meta.xml
<CustomField>
    <fullName>GM_plus_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional support or activities requested or recommended: Other</description>
    <inlineHelpText>Additional support or activities requested or recommended: Other</inlineHelpText>
    <label>GM plus: Other</label>
    <type>Checkbox</type>
</CustomField>