force-app/main/default/objects/Proposal__c/fields/GM_plus_Program_travel_site_visits__c.field-meta.xml
<CustomField>
    <fullName>GM_plus_Program_travel_site_visits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional support or activities requested or recommended: Program travel / site visits</description>
    <inlineHelpText>Additional support or activities requested or recommended: Program travel / site visits</inlineHelpText>
    <label>GM plus: Program travel / site visits</label>
    <type>Checkbox</type>
</CustomField>