force-app/main/default/objects/Proposal__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <description>Checked if this proposal has been granted and hasn&apos;t been withdrawn</description>
    <formula>AND(
 NOT(ISBLANK(Date_awarded__c)), 
 ISBLANK(Date_award_withdrawn__c), 
 ISBLANK(Date_request_withdrawn__c), 
 ISBLANK(Date_declined__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this proposal has been granted and hasn&apos;t been withdrawn</inlineHelpText>
    <label>Grant</label>
    <type>Checkbox</type>
</CustomField>