force-app/main/default/objects/Proposal__c/fields/Grant_process__c.field-meta.xml
<CustomField>
    <fullName>Grant_process__c</fullName>
    <description>Describes process by which grants are approved (Docket, Mini-docket, Discretionary)</description>
    <inlineHelpText>Describes process by which grants are approved (Docket, Mini-docket, Discretionary)</inlineHelpText>
    <label>Grant process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>