force-app/main/default/objects/Proposal__c/fields/Grant_request_comment__c.field-meta.xml
<CustomField>
    <fullName>Grant_request_comment__c</fullName>
    <description>Comment and further analysis on grant request. Include HOW proposed activities link to changes and root causes.</description>
    <inlineHelpText>Comment and further analysis on grant request. Include HOW proposed activities link to changes and root causes.</inlineHelpText>
    <label>Grant request comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>