force-app/main/default/objects/Proposal__c/fields/Grant_type__c.field-meta.xml
<CustomField>
    <fullName>Grant_type__c</fullName>
    <description>The type of this grant</description>
    <inlineHelpText>The type of this grant</inlineHelpText>
    <label>Grant type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_type</valueSetName>
    </valueSet>
</CustomField>