force-app/main/default/objects/Proposal__c/fields/Has_dependent_proposals__c.field-meta.xml
<CustomField>
    <fullName>Has_dependent_proposals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if at least one other proposal is dependent on this proposal, that is, can&apos;t be paid until this grant completes</description>
    <inlineHelpText>Checked if at least one other proposal is dependent on this proposal, that is, can&apos;t be paid until this grant completes</inlineHelpText>
    <label>Has dependent proposals</label>
    <type>Checkbox</type>
</CustomField>