force-app/main/default/objects/Proposal__c/fields/Invite__c.field-meta.xml
<CustomField>
    <fullName>Invite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The (first) invite linked to this proposal</description>
    <inlineHelpText>The (first) invite linked to this proposal</inlineHelpText>
    <label>Invite</label>
    <referenceTo>Invite__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>