force-app/main/default/objects/Proposal__c/fields/Is_first_grant__c.field-meta.xml
<CustomField>
    <fullName>Is_first_grant__c</fullName>
    <description>Checked if this grant is the first awarded for its organization</description>
    <formula>AND(
 Grant__c,
 Id = Account__r.First_grant__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this grant is the first awarded for its organization</inlineHelpText>
    <label>Is first grant</label>
    <type>Checkbox</type>
</CustomField>