force-app/main/default/objects/Proposal__c/fields/Is_overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_overdue__c</fullName>
    <description>This proposal is overdue - it has not been received and we&apos;re past the date due.</description>
    <formula>AND(ISBLANK( Date_received__c ), NOT(ISBLANK( Proposal_submit_deadline__c )), TODAY() &gt; Proposal_submit_deadline__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This proposal is overdue - it has not been received and we&apos;re past the date due.</inlineHelpText>
    <label>Is overdue</label>
    <type>Checkbox</type>
</CustomField>