force-app/main/default/objects/Proposal__c/fields/Is_renewal__c.field-meta.xml
<CustomField>
    <fullName>Is_renewal__c</fullName>
    <description>Checked if the org has received a grant prior to submitting this proposal</description>
    <formula>/* 
Calculates whether this proposal is a renewal, that is, 
whether the org has received a grant prior to submitting this proposal.
NOTE: suppose prop A becomes a grant, then prop B is submitted, and then A is withdrawn.  B will then switch from renewal to first time.
*/

/* No grants ever for the org */
IF (ISBLANK( Account__r.Earliest_date_awarded__c ), FALSE, 
/* Weird case where this prop is a grant that was entered after it was approved */
IF ( Date_awarded__c == Account__r.Earliest_date_awarded__c, FALSE,
/* This prop was entered after earliest grant was awarded, so it&apos;s a renewal */ 
IF (  DATEVALUE(CreatedDate) &gt;= Account__r.Earliest_date_awarded__c, TRUE,
/* Otherwise, not a renewal */
FALSE
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if the org has received a grant prior to submitting this proposal</inlineHelpText>
    <label>Is renewal</label>
    <type>Checkbox</type>
</CustomField>