force-app/main/default/objects/Proposal__c/fields/Milestone_recent__c.field-meta.xml
<CustomField>
    <fullName>Milestone_recent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The most recently completed linked milestone</description>
    <inlineHelpText>The most recently completed linked milestone</inlineHelpText>
    <label>Milestone recent</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Proposals (Milestone recent)</relationshipLabel>
    <relationshipName>Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>