force-app/main/default/objects/Proposal__c/fields/Missing_contract_docs__c.field-meta.xml
<CustomField>
    <fullName>Missing_contract_docs__c</fullName>
    <description>Which contract docs are missing: payment form, tax questionnaire, etc.</description>
    <inlineHelpText>Which contract docs are missing: payment form, tax questionnaire, etc.</inlineHelpText>
    <label>Missing contract docs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>