force-app/main/default/objects/Proposal__c/fields/Next_milestone_due__c.field-meta.xml
<CustomField>
    <fullName>Next_milestone_due__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The milestone with the earliest date due that hasn&apos;t yet been completed</description>
    <inlineHelpText>The milestone with the earliest date due that hasn&apos;t yet been completed</inlineHelpText>
    <label>Next milestone due</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Proposal for which milestone is next due</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>