force-app/main/default/objects/Proposal__c/fields/Next_milestone_type__c.field-meta.xml
<CustomField>
    <fullName>Next_milestone_type__c</fullName>
    <formula>TEXT(Next_milestone_due__r.Type__c)</formula>
    <label>Next milestone type</label>
    <type>Text</type>
</CustomField>