force-app/main/default/objects/Proposal__c/fields/Num_charges__c.field-meta.xml
<CustomField>
    <fullName>Num_charges__c</fullName>
    <description>The number of charges linked to this proposal</description>
    <inlineHelpText>The number of charges linked to this proposal</inlineHelpText>
    <label>Num charges</label>
    <summaryForeignKey>Charge__c.Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>