force-app/main/default/objects/Proposal__c/fields/Num_classifications__c.field-meta.xml
<CustomField>
    <fullName>Num_classifications__c</fullName>
    <description>The number of linked classification assign records</description>
    <inlineHelpText>The number of linked classification assign records</inlineHelpText>
    <label>Num classifications</label>
    <summaryForeignKey>Classification_Assign__c.Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>