force-app/main/default/objects/Proposal__c/fields/Num_milestones__c.field-meta.xml
<CustomField>
    <fullName>Num_milestones__c</fullName>
    <description>The number of linked milestones</description>
    <inlineHelpText>The number of linked milestones</inlineHelpText>
    <label>Num milestones</label>
    <summaryForeignKey>Milestone__c.Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>