force-app/main/default/objects/Proposal__c/fields/Num_payments_non_problem__c.field-meta.xml
<CustomField>
    <fullName>Num_payments_non_problem__c</fullName>
    <description>The number of linked non-problem payments</description>
    <inlineHelpText>The number of linked non-problem payments</inlineHelpText>
    <label>Num payments non problem</label>
    <summaryFilterItems>
        <field>Payment__c.Has_problem_non_formula__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>