force-app/main/default/objects/Proposal__c/fields/Num_referrals__c.field-meta.xml
<CustomField>
    <fullName>Num_referrals__c</fullName>
    <description>The number of referrals linked to this proposal (for use in declines/withdrawals)</description>
    <inlineHelpText>The number of referrals linked to this proposal (for use in declines/withdrawals)</inlineHelpText>
    <label>Num referrals</label>
    <summaryForeignKey>Referral__c.Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>