force-app/main/default/objects/Proposal__c/fields/OFAC_match__c.field-meta.xml
<CustomField>
    <fullName>OFAC_match__c</fullName>
    <description>Description of any &quot;hits&quot; obtained by searching at OFAC for account/contact names associated with this proposal</description>
    <inlineHelpText>Description of any &quot;hits&quot; obtained by searching at OFAC for account/contact names associated with this proposal</inlineHelpText>
    <label>OFAC match</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>