force-app/main/default/objects/Proposal__c/fields/Org_age_at_award_years__c.field-meta.xml
<CustomField>
    <fullName>Org_age_at_award_years__c</fullName>
    <description>The number of years between the date the org was founded and date awarded of this grant</description>
    <formula>IF(
 AND(
  NOT(ISBLANK( Account__r.Date_org_founded__c )),
  NOT(ISBLANK( Date_awarded__c ))
 ),
 (Date_awarded__c - Account__r.Date_org_founded__c) / 365,
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of years between the date the org was founded and date awarded of this grant</inlineHelpText>
    <label>Org age at award (years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>