force-app/main/default/objects/Proposal__c/fields/Org_name__c.field-meta.xml
<CustomField>
    <fullName>Org_name__c</fullName>
    <description>Org name from linked Profile or Account.</description>
    <formula>IF (NOT(ISBLANK( Profile__c )), Profile__r.Org_name__c,  Account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Org name from linked Profile or Account.</inlineHelpText>
    <label>Org name</label>
    <type>Text</type>
</CustomField>