force-app/main/default/objects/Proposal__c/fields/Paid_to_date__c.field-meta.xml
<CustomField>
    <fullName>Paid_to_date__c</fullName>
    <description>Total of Net Paid for linked payment amounts</description>
    <inlineHelpText>Total of Net Paid for linked payment amounts</inlineHelpText>
    <label>Paid to date</label>
    <summarizedField>Payment__c.Net_paid__c</summarizedField>
    <summaryForeignKey>Payment__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>