force-app/main/default/objects/Proposal__c/fields/Payment_dependent_on_prior_grant__c.field-meta.xml
<CustomField>
    <fullName>Payment_dependent_on_prior_grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This proposal/grant can&apos;t be paid until the given prior grant has its milestone completed and approved.</description>
    <inlineHelpText>This proposal/grant can&apos;t be paid until the given prior grant has its milestone completed and approved.</inlineHelpText>
    <label>Payment dependent on prior grant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Proposal__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Proposal__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <infoMessage>Select a prior grant from the same account as this grant.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Proposals (dependency)</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>