force-app/main/default/objects/Proposal__c/fields/Payment_recent__c.field-meta.xml
<CustomField>
    <fullName>Payment_recent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The most recent linked active payment</description>
    <inlineHelpText>The most recent linked active payment</inlineHelpText>
    <label>Payment recent</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>