force-app/main/default/objects/Proposal__c/fields/Pending_milestone_descriptions__c.field-meta.xml
<CustomField>
    <fullName>Pending_milestone_descriptions__c</fullName>
    <description>Descriptions of milestones linked to this proposal that haven&apos;t yet been completed</description>
    <inlineHelpText>Descriptions of milestones linked to this proposal that haven&apos;t yet been completed</inlineHelpText>
    <label>Pending milestone descriptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>