force-app/main/default/objects/Proposal__c/fields/Primary_funding_sources__c.field-meta.xml
<CustomField>
    <fullName>Primary_funding_sources__c</fullName>
    <description>List of group&apos;s sources of funding</description>
    <inlineHelpText>List of group&apos;s sources of funding</inlineHelpText>
    <label>Primary funding sources</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>