force-app/main/default/objects/Proposal__c/fields/Prior_proposal__c.field-meta.xml
<CustomField>
    <fullName>Prior_proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The prior proposal to this group from which this proposal was cloned</description>
    <inlineHelpText>The prior proposal to this group from which this proposal was cloned</inlineHelpText>
    <label>Prior proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Proposals (Prior proposal)</relationshipLabel>
    <relationshipName>Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>